# python-image

./: Dockerfile  pyproject.toml  readme.md  requirements.txt
app/: api.py  config.py  db.py  logger_config.py  utils.py
app/config/: gunicorn_conf.py
