[tool.poetry]
name = "visual-image"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pandas = "^2.3.1"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
sqlalchemy = "^2.0.41"
scikit-image = "^0.25.2"
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
